[gd_scene load_steps=29 format=3 uid="uid://cm0p2juh3u18d"]

[ext_resource type="Script" path="res://Scripts/El Droguas.gd" id="1_7rfai"]
[ext_resource type="Texture2D" uid="uid://dv1nx2ynsunu" path="res://Images/El Droguas/El Droguas.png" id="1_31f0f"]
[ext_resource type="Texture2D" uid="uid://2v5k0m7hexbx" path="res://Images/El Droguas/Eyes.png" id="2_ilvj5"]
[ext_resource type="Texture2D" uid="uid://b1hb2cqf0uejt" path="res://Images/El Droguas/Mouthes.png" id="3_5ob2a"]
[ext_resource type="AudioStream" uid="uid://dkhsv6hafiq7k" path="res://Audio/EnemyHit.ogg" id="4_qo2cx"]
[ext_resource type="AudioStream" uid="uid://w1pyphhp6tmh" path="res://Audio/DrogDie.ogg" id="5_nxvdv"]
[ext_resource type="AudioStream" uid="uid://mp0twcb67cp2" path="res://Audio/Flip.ogg" id="6_bc6hy"]
[ext_resource type="AudioStream" uid="uid://cow47ssrtwwoq" path="res://Audio/DroguasLaugh.ogg" id="6_v0wc1"]

[sub_resource type="Animation" id="Animation_0hc4d"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_aahff"]
resource_name = "Funny Eyes"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0]
}

[sub_resource type="Animation" id="Animation_ionr1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyeep"]
_data = {
"Dead": SubResource("Animation_0hc4d"),
"Funny Eyes": SubResource("Animation_aahff"),
"RESET": SubResource("Animation_ionr1")
}

[sub_resource type="Animation" id="Animation_hwpxq"]
resource_name = "Boom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5f7ch"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_quuu1"]
resource_name = "Laugh"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6), Vector2(0, 0), Vector2(0, 6), Vector2(0, 0), Vector2(0, 6), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r306m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7kui1"]
resource_name = "Smile"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0174533, 0.0174533, -0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bx8do"]
_data = {
"Boom": SubResource("Animation_hwpxq"),
"Dead": SubResource("Animation_5f7ch"),
"Laugh": SubResource("Animation_quuu1"),
"RESET": SubResource("Animation_r306m"),
"Smile": SubResource("Animation_7kui1")
}

[sub_resource type="Animation" id="Animation_o4o6p"]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.588235, 0.258824, 0.0392157, 1), Color(0.588235, 0.258824, 0.0392157, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage/Damage:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r04bv"]
_data = {
"Damage": SubResource("Animation_o4o6p")
}

[sub_resource type="Animation" id="Animation_j43gx"]
resource_name = "Dance"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(100, 75), Vector2(75, 50), Vector2(50, 75), Vector2(75, 50), Vector2(100, 75), Vector2(125, 50), Vector2(150, 75), Vector2(125, 50), Vector2(100, 75)]
}

[sub_resource type="Animation" id="Animation_erxu4"]
resource_name = "Death"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 75)]
}

[sub_resource type="Animation" id="Animation_nrx2h"]
resource_name = "Flip"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_10vih"]
resource_name = "FlipDone"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_srlhn"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_sjlj7"]
resource_name = "Intro"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(100, -50), Vector2(100, 85), Vector2(100, 70), Vector2(100, 75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Movement/Laugh:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0oe71"]
resource_name = "Phase2"
length = 13.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.8, 2.9, 3.2, 3.6, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.8, 4.9, 5.2, 5.6, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.7, 6.8, 7.2, 7.6, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.6, 8.7, 9, 9.4, 9.7, 9.8, 9.9, 10, 10.1, 10.2, 10.3, 10.7, 10.8, 11.1, 11.8, 12, 12.1, 12.2, 12.3, 12.4, 12.5, 12.6, 12.9, 13, 13.4, 13.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(100, -80), Vector2(100, 15), Vector2(25, 15), Vector2(100, -15), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 220), Vector2(175, 210), Vector2(175, -15), Vector2(100, -15), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 220), Vector2(100, 210), Vector2(100, -15), Vector2(25, -15), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 220), Vector2(25, 210), Vector2(25, -15), Vector2(100, -15), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 25), Vector2(100, 15), Vector2(100, 220), Vector2(100, 210), Vector2(100, -15), Vector2(175, -15), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 25), Vector2(175, 15), Vector2(175, 220), Vector2(175, 210), Vector2(175, -15), Vector2(25, -15), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 25), Vector2(25, 15), Vector2(25, 220), Vector2(25, 210), Vector2(25, -75), Vector2(100, -75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w3jrq"]
_data = {
"Dance": SubResource("Animation_j43gx"),
"Death": SubResource("Animation_erxu4"),
"Flip": SubResource("Animation_nrx2h"),
"FlipDone": SubResource("Animation_10vih"),
"Idle": SubResource("Animation_srlhn"),
"Intro": SubResource("Animation_sjlj7"),
"Phase2": SubResource("Animation_0oe71")
}

[node name="El Droguas" type="Node2D"]
z_index = 1
position = Vector2(100, 75)
scale = Vector2(-1, 1)
script = ExtResource("1_7rfai")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_31f0f")
hframes = 4

[node name="Eyes" type="Node2D" parent="Body"]

[node name="Eye Sprite" type="Sprite2D" parent="Body/Eyes"]
rotation = -0.0436332
texture = ExtResource("2_ilvj5")
hframes = 4

[node name="Eyes" type="AnimationPlayer" parent="Body/Eyes/Eye Sprite"]
autoplay = "Funny Eyes"
libraries = {
"": SubResource("AnimationLibrary_wyeep")
}

[node name="Mouth" type="Sprite2D" parent="Body"]
rotation = -0.0174533
texture = ExtResource("3_5ob2a")
hframes = 4

[node name="Mouth" type="AnimationPlayer" parent="Body/Mouth"]
autoplay = "Laugh"
libraries = {
"": SubResource("AnimationLibrary_bx8do")
}

[node name="Die" type="AudioStreamPlayer" parent="Body/Mouth/Mouth"]
stream = ExtResource("5_nxvdv")

[node name="Flip" type="AudioStreamPlayer" parent="Body/Mouth/Mouth"]
stream = ExtResource("6_bc6hy")
volume_db = -5.0

[node name="Damage" type="AnimationPlayer" parent="Body"]
libraries = {
"": SubResource("AnimationLibrary_r04bv")
}

[node name="Damage" type="AudioStreamPlayer" parent="Body/Damage"]
stream = ExtResource("4_qo2cx")

[node name="Movement" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w3jrq")
}

[node name="Laugh" type="AudioStreamPlayer" parent="Movement"]
stream = ExtResource("6_v0wc1")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, 2)
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-23, 45, 23, 45, 23, -5, 40, -6, 50, -20, 28, -30, 0, -51, -25, -31, -47, -22, -37, -6, -22, -5)

[node name="Shoot" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -328.0
offset_top = -163.0
offset_right = 222.0
offset_bottom = 362.0
color = Color(0.211765, 0.00392157, 0.27451, 1)

[connection signal="animation_finished" from="Movement" to="." method="_on_movement_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
